--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -20,9 +20,9 @@ jobs:
       run: pip install -r requirements.txt
 # DESCARGA DATASET
     - name: download dataset
-      run: wget -O data/l4d2_player_stats_final2.csv ${{github.event.client_payload.dataseturl}}
+      run: wget -O data/heart_disease.csv ${{github.event.client_payload.dataseturl}}
     - name: cat dataset
-      run: cat data/l4d2_player_stats_final2.csv
+      run: cat data/heart_disease.csv
  #EJECUTA EL MODELO 
     - name: train model
       run: python model/train.py
